[package]
name = "aq"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
atty = "0.2.14"
clap = "3.0.0-beta.2"
serde = "1.0.124"
serde-transcode = "1.1.0"
serde_json = "1.0.64"
thiserror = "1.0.24"
toml = "0.5.8"
