[package]
name = "aq-cli"
version = "0.2.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "Extend jq for any data format"
readme = "README.md"
repository = "https://github.com/rossmacarthur/aq"
license = "MIT OR Apache-2.0"
keywords = ["cli", "json", "toml", "yaml", "query"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.39"
atty = "0.2.14"
serde = "1.0.124"
serde-transcode = "1.1.0"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
toml = "0.5.8"

[[bin]]
name = "aq"
path = "src/main.rs"
