[package]
name = "aq-cli"
version = "0.2.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
description = "Extend jq for any data format"
readme = "README.md"
repository = "https://github.com/rossmacarthur/aq"
license = "MIT OR Apache-2.0"
keywords = ["cli", "json", "toml", "yaml", "query"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.69"
is-terminal = "0.4.3"
serde = "1.0.152"
serde-transcode = "1.1.1"
serde_json = "1.0.93"
serde_yaml = "0.9.17"
toml = "0.7.2"

[[bin]]
name = "aq"
path = "src/main.rs"
